--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,16 @@
 {
     "require": {
         "josantonius/file": "^1.1" ,
-        "acide/core" : "*"
+        "acide/core" : "*",
+        "phug/phug": "^1.6",
+        "hassankhan/config": "^2.1",
+        "league/url": "^3.3"
     } ,
+    "autoload": {
+        "psr-4": {
+            "ACIDE\\" : ""
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
