--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
     "angular": "^1.7.9",
+    "angular-route": "^1.6.9",
+    "jquery": "^3.4.1",
     "metro4": "^4.3.6"
   },
   "devDependencies": {
