--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "angular": "^1.7.9",
     "angular-route": "^1.6.9",
     "jquery": "^3.4.1",
-    "metro4": "^4.3.6"
+    "metro4": "^4.3.6",
+    "laravel-mix": "^5.0.2",
+    "laravel-mix-pug": "^0.3.0"
   },
   "devDependencies": {
-    "laravel-mix": "^5.0.2"
+    "pug": "^2.0.4",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "scripts": {
     "webpackCompile": "node_modules/.bin/webpack --config=node_modules/laravel-mix/setup/webpack.config.js",
