Close Project panel created !

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/assets/js/app.js": "/assets/js/app.js",
     "/assets/css/app.css": "/assets/css/app.css",
+    "/resources/views/windows/html/close_project.html": "/resources/views/windows/html/close_project.html",
     "/resources/views/windows/html/new_project.html": "/resources/views/windows/html/new_project.html",
     "/resources/views/windows/html/new_record.html": "/resources/views/windows/html/new_record.html"
 }
