Files extensions completed successfully

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "laravel-mix-pug": "^0.3.0",
     "metro4": "^4.3.6",
     "simplebar": "^5.1.0",
+    "tabler-icons": "^1.5.1",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
