--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-route": "^1.6.9",
     "he": "^1.2.0",
     "jquery": "^3.4.1",
+    "jquery.terminal": "^2.15.4",
     "laravel-mix": "^5.0.2",
     "laravel-mix-pug": "^0.3.0",
     "metro4": "^4.3.6",
