--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular": "^1.7.9",
     "angular-route": "^1.6.9",
     "he": "^1.2.0",
+    "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "jquery.terminal": "^2.15.4",
     "laravel-mix": "^5.0.2",
