--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -7,5 +7,6 @@
     "/resources/views/windows/html/new_file.html": "/resources/views/windows/html/new_file.html",
     "/resources/views/windows/html/new_project.html": "/resources/views/windows/html/new_project.html",
     "/resources/views/windows/html/new_record.html": "/resources/views/windows/html/new_record.html",
-    "/resources/views/windows/html/rename_directory.html": "/resources/views/windows/html/rename_directory.html"
+    "/resources/views/windows/html/rename_directory.html": "/resources/views/windows/html/rename_directory.html",
+    "/resources/views/windows/html/rename_file.html": "/resources/views/windows/html/rename_file.html"
 }
