Download file context menu item created successfully !

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "jquery.terminal": "^2.15.4",
+    "js-file-downloader": "^1.1.8",
     "laravel-mix": "^5.0.2",
     "laravel-mix-pug": "^0.3.0",
     "metro4": "^4.3.6",
@@ -21,7 +22,7 @@
   "devDependencies": {
     "pug": "^2.0.4",
     "resolve-url-loader": "^3.1.0",
-    "sass": "^1.26.3",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
