--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "illuminate/events": "^7.2",
         "rakit/validation": "^1.2",
         "illuminate/console": "*",
-        "acide/acfilemanager" : "*"
+        "acide/acfilemanager" : "*",
+        "nelexa/zip": "^3.3"
     } ,
     "autoload": {
         "psr-4": {
