--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "devDependencies": {
     "@types/ace": "0.0.43",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.1",
-    "sass": "^1.26.8",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "vue-template-compiler": "^2.6.11",
