--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "illuminate/console": "^7.19",
         "acide/acfilemanager" : "*",
         "nelexa/zip": "^3.3",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "ext-openssl": "^7.4"
     } ,
     "autoload": {
         "psr-4": {
