--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "jquery.terminal": "^2.17.6",
     "metro4": "^4.3.10",
+    "platform": "^1.3.6",
     "simplebar": "^5.2.1",
     "tabler-icons": "^1.10.0",
     "uuid": "^7.0.3"
