--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "metro4": "^4.3.10",
     "platform": "^1.3.6",
     "simplebar": "^5.2.1",
+    "split.js": "^1.6.2",
     "tabler-icons": "^1.10.0",
     "uuid": "^7.0.3"
   },
