--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "mix --production"
+    "production": "mix --production",
+    "test": "jest"
   },
   "dependencies": {
     "@fluentui/react": "^8.6.1",
@@ -17,10 +18,14 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-beta.0",
+    "@types/jest": "^26.0.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "laravel-mix": "^6.0.6",
     "lodash": "^4.17.19",
     "postcss": "^8.1.14",
