--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "hot": "mix watch --hot",
     "prod": "npm run production",
     "production": "mix --production",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint"
   },
   "dependencies": {
     "@fluentui/react": "^8.6.1",
-    "@types/babel-generator": "^6.25.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -20,17 +20,30 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-beta.0",
+    "@types/babel-generator": "^6.25.3",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "axios": "^0.21",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "@uifabric/icons": "^7.5.23",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.23.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
     "jest": "^26.6.3",
     "laravel-mix": "^6.0.6",
-    "lodash": "^4.17.19",
     "postcss": "^8.1.14",
     "react-refresh": "^0.9.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/resources"
+    ]
   }
 }
