--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 .env
 .env.backup
 .phpunit.result.cache
+.idea
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+temp
