--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.1",
     "jest": "^26.6.3",
+    "laravel-echo": "^1.10.0",
     "laravel-mix": "^6.0.6",
     "postcss": "^8.1.14",
+    "pusher-js": "^7.0.3",
     "react-refresh": "^0.9.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3"
