feat: website created

--- a/nx.json
+++ b/nx.json
@@ -1,13 +1,18 @@
 {
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
-  "affected": { "defaultBase": "master" },
+  "affected": {
+    "defaultBase": "master"
+  },
   "npmScope": "acide",
   "tasksRunnerOptions": {
     "default": {
@@ -21,8 +26,22 @@
     }
   },
   "projects": {
-    "acide": { "tags": [] },
-    "acide-e2e": { "tags": [], "implicitDependencies": ["acide"] },
-    "app-ui": { "tags": [] }
+    "acide": {
+      "tags": []
+    },
+    "acide-e2e": {
+      "tags": [],
+      "implicitDependencies": ["acide"]
+    },
+    "app-ui": {
+      "tags": []
+    },
+    "website": {
+      "tags": []
+    },
+    "website-e2e": {
+      "tags": [],
+      "implicitDependencies": ["website"]
+    }
   }
 }
