--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
+    "build:ide": "npm run build ide && npm run nx run ide:fix-build",
+    "build:executors": "npx tsc tools/executors/acide/fix-build/fix-build.impl.ts",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
