--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@acide/app-ui": ["libs/app-ui/src/index.ts"]
+      "@acide/app-ui": ["libs/app-ui/src/index.ts"],
+      "@acide/morajlab.fluent-app-ui-kit": [
+        "libs/morajlab.fluent-app-ui-kit/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
