--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nrwl/tao": "11.5.2",
     "@nrwl/web": "11.5.2",
     "@nrwl/workspace": "11.5.2",
+    "@teambit/bvm": "0.0.20",
     "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
