--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
+    "glob": "^7.1.6",
     "next": "10.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "regenerator-runtime": "0.13.7",
+    "rimraf": "^3.0.2",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -60,9 +62,11 @@
     "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/parse-gitignore": "^1.0.0",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-router-dom": "5.1.6",
+    "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
@@ -75,7 +79,10 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "fs-extra": "^9.1.0",
+    "glob-gitignore": "^1.0.14",
     "jest": "26.2.2",
+    "parse-gitignore": "^1.0.1",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
