--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@teambit/bvm": "0.0.20",
     "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
+    "@types/micromatch": "^4.0.1",
     "@types/node": "14.14.33",
     "@types/parse-gitignore": "^1.0.0",
     "@types/react": "16.9.56",
@@ -80,8 +81,8 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "fs-extra": "^9.1.0",
-    "glob-gitignore": "^1.0.14",
     "jest": "26.2.2",
+    "micromatch": "^4.0.4",
     "parse-gitignore": "^1.0.1",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
