--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "glob": "^7.1.6",
+    "interactjs": "^1.10.11",
     "next": "10.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -53,6 +54,7 @@
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
+    "@interactjs/types": "^1.10.11",
     "@nrwl/cli": "11.5.2",
     "@nrwl/cypress": "11.5.2",
     "@nrwl/eslint-plugin-nx": "11.5.2",
