--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "10.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-draggable": "^4.4.3",
     "react-router-dom": "5.2.0",
     "regenerator-runtime": "0.13.7",
     "rimraf": "^3.0.2",
