--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -31,6 +31,7 @@ jobs:
           package-directory: 'libs/${{ matrix.package.local_path }}'
           split-repository-organization: 'morteza-jamali'
           split-repository-name: '${{ matrix.package.split_repository }}'
+          branch: 'master'
           user-name: 'morteza-jamali'
           user-email: 'mortezajamali4241@gmail.com'
 
@@ -42,5 +43,6 @@ jobs:
           package-directory: 'libs/${{ matrix.package.local_path }}'
           split-repository-organization: 'morteza-jamali'
           split-repository-name: '${{ matrix.package.split_repository }}'
+          branch: 'master'
           user-name: 'morteza-jamali'
           user-email: 'mortezajamali4241@gmail.com'
